This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-03-26:

- Fixed an intermittent crash in 'command -x' experienced on some arm/arm64
  systems running Linux.

- Fixed a bug that caused 'printf "%(%Z)T\n" now' to print nonsense strings
  such as 'ica' on Cygwin.

2023-03-24:

- Fixed a crash in read -d D in multibyte locales that occurred when a byte
  with the 8th bit set was passed as the delimiter character D. For example,
  read -d $'\200' crashed in a UTF-8 locale. (Note that multibyte delimiter
  characters are not supported yet.)

2023-03-23:

- A bug has been fixed in 'printf' and 'print -f' that caused the %a, %A, %e,
  %E, %f, %F, %g, and %G conversion specifiers to evaluate any unexpanded
  arithmetic expression passed to them twice, causing any side effects, such
  as incrementing a variable, to be incorrect. Bug introduced in 93t- (2008).

- The POSIX compatibility mode has been amended to cause 'printf' to parse only
  decimal/hexadecimal/octal constants for its numerical conversion specifiers,
  instead of arithmetic expressions. (POSIX mode does not change 'print -f'.)

2023-03-20:

- Fixed incorrect result of array slicing ${array[@]:offset:length} where
  'length' is a nested expansion involving an array. For example,
  ${array[@]:0:${#array[@]}} is now correctly equivalent to ${array[@]}.

- Fixed bugs in 'command -x' and 'command -v -x' (see 2021-01-30) that caused
  it to fail to disregard built-ins if /opt/ast/bin (the virtual path for
  path-bound built-ins) is in $PATH.

2023-03-19:

- Fixed a crash in 'read' (as well as a spurious error in 'printf -v', added
  on 2021-11-18) when using an indexed array subscript with an arithmetic
  expression that yields 0 while also modifying the variable. For example,