@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-03-29:
+
+- Fixed a bug in 'printf -v' (added on 2021-11-18) where using the %B format
+  specifier would overwrite any data already written to the variable.
+
 2023-03-26:
 
 - Fixed an intermittent crash in 'command -x' experienced on some arm/arm64
